k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: smtpie
  name: smtpie
  namespace: smtpie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smtpie
  template:
    metadata:
      labels:
        app: smtpie
    spec:
      restartPolicy: Always
      containers:
        - image: zjor/smtpie-js:latest
          imagePullPolicy: Always
          name: smtpie
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: config-volume
              mountPath: /etc/smtpie
          livenessProbe:
            # failureThreshold: 10
            initialDelaySeconds: 60
            periodSeconds: 15
            httpGet:
              path: /actuator/health
              port: 3000
              scheme: HTTP
          readinessProbe:
            # failureThreshold: 10
            initialDelaySeconds: 60
            periodSeconds: 60
            httpGet:
              path: /actuator/health
              port: 3000
              scheme: HTTP
      volumes:
        - name: config-volume
          configMap:
            name: smtpie-config
